Checkpoint: Hero section improvements: integrated cyberpunk Pikachu with transparent background, applied Nasalization font for technical look, increased Pikachu size (600-850px) to fill vertical space, moved 300% card higher to avoid overlapping glasses, added floating cards with animations

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,8 @@
 
 /* Custom Fonts */
 @font-face {
-  font-family: 'Adriana';
-  src: url('/adriana.ttf') format('truetype');
+  font-family: 'Nasalization';
+  src: url('/Nasalization.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
